<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Upmile</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="signin">Sign In</string>
    <string name="mysettings">Settings</string>
    <string name="menu_settings">Menu Settings</string>
    <string name="biz_reg">Register Your Business</string>
    <string name="title_activity_signout">SignoutActivity</string>
    <string name="title_activity_my_settings">MySettingsActivity</string>
    <string name="title_activity_merchant_registration">Merchant Registration</string>
    <string name="user_email_confirm">Please confirm your email address by clicking on the "Email Confirmation" link.</string>
    <string name="check_merchant_reg_status_pending">Your Merchant Registration has not been approved yet. Please, check back later.</string>
    <string name="check_merchant_reg_status_confirmed">Congrats! Your Merchant Registration has been approved.</string>

    <string-array name="states_array">
        <item>Select State</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <string name="merchant_name">Business Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="loading">Loading...</string>
    <string name="merchant_registration">Merchant? Register to post your deals!</string>
    <string name="my_merchant_profile">My Merchant Profile</string>
    <string name="title_activity_check_merchant_registration">CheckMerchantRegistrationActivity</string>
    <string name="new_deal">New Deal</string>
    <string name="my_deals">My Deals</string>
    <string name="title_activity_new_deal">NewDealActivity</string>
    <string name="descr">Description</string>
    <string name="old_price">Old Price</string>
    <string name="new_price">New Price</string>
    <string name="deal_expiration">Deal Expiration</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="location_name">Location Name</string>
    <string name="error_newdeal_exprtime_notvalid">Expiration Time Is Not Valid</string>
    <string name="error_newdeal_exprdate_notvalid">Expiration Date Is Not Valid</string>
    <string name="deal_picture">Deal Picture</string>
    <string name="add_deal_picture">Add Picture</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_deal_photo">NewDealPhotoActivity</string>
    <string name="btnTakePicture">Take Picture</string>
    <string name="cannot">Cant</string>
    <string name="images">images</string>
    <string name="ok">OK</string>
    <string name="picture1">Picture1</string>
    <string name="merchant_reg_check">Merchant Regstration Check</string>
    <string name="owner_fname">Owner First Name</string>
    <string name="owner_lname">Owner Last Name</string>
    <string name="check_my_reg">Check My Registration</string>

</resources>